# copilot-memory

./: .gitignore  README.md  pyproject.toml
copilot_memory/: __init__.py  embedder.py  episodic.py  fulltext.py  manager.py
examples/: chat_agent.py
genesis_memory/: __init__.py  activation.py  classification.py  embeddings.py  factory.py  graph.py  intent.py  linker.py  protocols.py  retrieval.py  store.py  taxonomy.py  types.py
genesis_memory/backends/: chromadb.py  qdrant.py  schema.py  sqlite_links.py  sqlite_metadata.py  sqlite_pending.py  sqlite_text.py
genesis_memory/embedding_backends/: dashscope.py  deepinfra.py  ollama.py  openai_compat.py
tests/: test_activation.py  test_chromadb_backend.py  test_classification.py  test_embedder.py  test_embeddings.py  test_graph.py  test_integration.py  test_intent.py  test_linker.py  test_retrieval.py  test_rrf.py  test_sqlite_backends.py  test_store.py
