[project]
name = "copilot-memory"
version = "0.1.0"
description = "Hybrid AI memory: Qdrant vectors + SQLite FTS5 with multi-factor scoring"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "memory", "qdrant", "fts5", "vector-search", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "qdrant-client>=1.7.0",
    "aiosqlite>=0.19.0",
    "openai>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
